# scout-hq

./: .gitignore  Dockerfile  README.md  alembic.ini  pyproject.toml  test_attach.py
.github/workflows/: build.yml
app/: config.py  constants.py  main.py  templating.py
app/db/: models.py  session.py
app/dispatchers/: __init__.py  base.py  claude_queue.py  cli.py  config.py  file_queue.py  human.py  registry.py  results.py  schemas.py  service.py
app/importers/: tasks_json.py  tasks_md.py
app/nexus/: __init__.py  client.py
app/routes/: agents.py  api.py  approvals.py  ask.py  audit.py  context.py  entities.py  settings.py  tasks.py  webhooks.py
app/static/: app.css  app.js  manifest.json
app/static/css/: components.css  layout.css  tokens.css
app/templates/: _layout.html  _macros.html.j2  base.html
app/templates/_partials/: context_panel.html  entities_panel.html  entity_search_results.html  ep_suggest_content.html  ep_suggestions_section.html  pinned_entities_list.html  status_badge.html  task_detail_body.html  (+3 more)
config/: dispatchers.yaml
docs/integrations/: lightrag.md
migrations/: env.py
migrations/versions/: 0001_initial_schema.py  0002_entity_tables.py  0003_task_entity_audit.py  0004_add_parent_id_to_tasks.py  0005_add_domain_to_tasks.py
tests/: conftest.py  test_approvals.py  test_dispatcher_cli.py  test_dispatcher_results.py  test_dispatcher_safety_guards.py  test_dispatchers.py  test_dockerfile_runtime.py  test_file_queue_worker.py  test_nexus_client.py  test_tasks.py  test_ui_regressions.py
workers/: nexus_file_queue_worker.py
(+17 files in other folders)
